# miniUtil

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  miniUtil.cpp  miniUtil.h
test/: CMakeLists.txt  baseTest.cpp
